# FastAPI_project

./: .dockerignore  .env  Dockerfile  Makefile  README  docker-compose.yml  pyproject.toml
Tested_function/: Tested.py
app/: main.py
app/api/: CRUD.py  cryptography.py  database.py  db.py  db_connect.py  db_crud.py  models.py  routers.py  schemas.py  token_utils.py
app/api/db_utils/: db_connect.py  db_crud.py
app/api/models/: models.py  schemas.py
app/api/redis_utils/: redis_connect.py  redis_crud.py
app/api/routers/: auth_routers.py  photo_routers  photo_routers.py  routers.py
app/api/utils/: picture_utils.py  token_utils.py
app/static/: styles.css
app/static/scripts/: login.js  logout.js  photo.js  registration.js
app/static/styles/: index.css
app/templates/: index.html  login.html  pictures.html  registration.html
app/tests/: conftest.py  test_routes.py
migrations/: env.py
migrations/versions/: 32ec65f91a88_added_required_tables.py  4ca168aa7b66_add_is_super_column.py  5feaef0f4863_.py  f9fe14b0b277_add_is_super_column.py
